--- a/delva-studio/index.html
+++ b/delva-studio/index.html
@@ -3,8 +3,10 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/camera.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz@6..96&family=Open+Sans&display=swap"
+        rel="stylesheet">
     <title>Delva Studio</title>
 </head>
 
